Added english in code

--- a/spacebetween.html
+++ b/spacebetween.html
@@ -29,9 +29,10 @@
                                 Rechner
                             </a>
                             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-                                <li><a class="dropdown-item" href="#">Abstandsrechner</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                <li><a class="dropdown-item" href="spacebetween.html">Space between devices</a></li>
+                                <li><a class="dropdown-item" href="./elextricalcurrent.html">Electrical paramters</a>
+                                </li>
+
                             </ul>
                         </li>
                     </ul>
